--- a/style.css
+++ b/style.css
@@ -300,9 +300,17 @@ h1 {
 
 }
 
+
 .gameBoard{
+	width: 55vw;
 	padding-top: 5vh;
 	padding-bottom: 5vh;
+}
+
+.box, .gamePiece{
+
+	width: 130px;
+    height: 130px;
 }
 }
 
@@ -318,19 +326,11 @@ h1 {
 	font-size: 2.2rem;
 }
 
-.box, .gamePiece{
 
-	width: 140px;
-    height: 140px;
-}
 }
 
 @media (max-width: 1166px) {
-.box, .gamePiece{
 
-	width: 130px;
-    height: 130px;
-}
 }
 
 @media (max-width: 1140px) {
